--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev --port 3000",
+    "dev": "nuxt dev",
+    "dev:host": "nuxt dev --host 0.0.0.0 --port 3001",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare && husky install",
@@ -33,12 +34,16 @@
     "@vueuse/core": "^9.13.0",
     "@vueuse/nuxt": "^9.13.0",
     "eslint": "^8.37.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vitest": "^0.1.4",
     "eslint-plugin-vue": "^9.10.0",
     "husky": "^8.0.0",
     "jsdom": "^21.1.1",
     "lint-staged": "^13.2.2",
-    "nuxt": "^3.3.2",
+    "nuxt": "^3.12.4",
+    "prettier": "^3.3.3",
+    "shadcn-nuxt": "^0.10.4",
     "typescript": "^5.0.3",
     "vitest": "^0.30.1",
     "vue-tsc": "^1.2.0"
@@ -46,6 +51,14 @@
   "dependencies": {
     "@pinia/nuxt": "^0.4.7",
     "@smplrspace/smplr-loader": "^2.19.0",
-    "pinia": "^2.0.33"
+    "@svgdotjs/svg.js": "^3.2.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.412.0",
+    "pinia": "^2.0.33",
+    "radix-vue": "^1.9.2",
+    "svg-pan-zoom": "^3.6.1",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
