--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   },
   "devDependencies": {
     "@nuxt/image": "^1.7.0",
-    "@nuxt/test-utils": "^3.4.3",
+    "@nuxt/test-utils": "^3.15.4",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/i18n": "^8.0.0-beta.12",
-    "@nuxtjs/tailwindcss": "^6.12.1",
+    "@nuxtjs/tailwindcss": "^6.13.1",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
@@ -39,13 +39,13 @@
     "eslint-plugin-vitest": "^0.1.4",
     "eslint-plugin-vue": "^9.10.0",
     "husky": "^8.0.0",
-    "jsdom": "^21.1.1",
+    "jsdom": "^22.1.0",
     "lint-staged": "^13.2.2",
     "nuxt": "^3.12.4",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "shadcn-nuxt": "^0.10.4",
     "typescript": "^5.0.3",
-    "vitest": "^0.30.1",
+    "vitest": "^3.0.4",
     "vue-tsc": "^1.2.0"
   },
   "dependencies": {
@@ -59,6 +59,7 @@
     "radix-vue": "^1.9.2",
     "svg-pan-zoom": "^3.6.1",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul-vue": "^0.2.0"
   }
 }
